--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.7.1",
     "bootstrap": "^5.0.0-beta2",
     "bootstrap-icons": "^1.3.0",
+    "emailjs-com": "^2.6.4",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
